' -*- mode: plantuml; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*-
'
' Copyright (C) 2026 Marco Craveiro <marco.craveiro@gmail.com>
'
' This program is free software; you can redistribute it and/or modify it under
' the terms of the GNU General Public License as published by the Free Software
' Foundation; either version 3 of the License, or (at your option) any later
' version.
'
' This program is distributed in the hope that it will be useful, but WITHOUT
' ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
' FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License along with
' this program; if not, write to the Free Software Foundation, Inc., 51 Franklin
' Street, Fifth Floor, Boston, MA 02110-1301, USA.
'
@startuml

title ores.shell.assets Component

set namespaceSeparator ::

namespace ores #F2F2F2 {
    namespace shell #F2F2F2 {
        namespace app #F2F2F2 {
            namespace commands #F2F2F2 {
                namespace assets #F2F2F2 {
                    class image_commands {
                        {static} +register_commands(root_menu : cli::Menu&, session : nats_client&)
                    }
                    class image_tag_commands {
                        {static} +register_commands(root_menu : cli::Menu&, session : nats_client&)
                    }
                    class tag_commands {
                        {static} +register_commands(root_menu : cli::Menu&, session : nats_client&)
                    }
                }
            }
        }
    }
}

' --- manual: everything below this line is hand-authored; the script preserves it ---

ores.shell.api ..> ores.shell.assets : request helpers
ores.assets.api ..> ores.shell.assets : domain, messaging

' Local Variables:
' compile-command: "java -Djava.awt.headless=true -DPLANTUML_SECURITY_PROFILE=UNSECURE -DPLANTUML_LIMIT_SIZE=65535 -jar /usr/share/plantuml/plantuml.jar ores.shell.assets.puml"
' End:
@enduml
